# banger_names

./: .coveragerc  .flake8  .gitignore  README.md  config.yaml  pyproject.toml  tox.ini
.github/workflows/: build.yaml
banger_names/: name_generator.py  names.py
tests/: test_name_generator.py
